--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 </head>
 <body>
     <header>
-        <marquee><h1>This is how to we can host any static website to GitHub</h1></marquee>
-        <p>know more <a href="https://medium.com/swlh/how-to-host-your-website-with-a-custom-domain-for-free-a6f75fecc067">here</a></p>
+        <marquee><h1>This is how we can host any static website to GitHub</h1></marquee>
+        <p>to know more <a href="https://medium.com/swlh/how-to-host-your-website-with-a-custom-domain-for-free-a6f75fecc067">click here</a></p>
     </header>
 </body>
 </html>
